--- a/public/css/Detail_Vendor.css
+++ b/public/css/Detail_Vendor.css
@@ -1,14 +1,24 @@
 .container_price {
-    background-color: red;
+    background-color: black;
+    opacity: 20%;
     position: absolute;
     text-align: start;
     bottom: 0px;
     left: 0.75rem;
     width: 93.8145%;
     height: 22%;
+}
+.price_text {
+    opacity: 100%;
+    position: absolute;
+    text-align: start;
+    bottom: 0px;
+    left: 0.75rem;
+    height: 22%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    font-family: SourceSerif4-SemiBold;
 }
 
 .Carousel_image {
