--- a/public/css/Detail_Vendor.css
+++ b/public/css/Detail_Vendor.css
@@ -1,12 +1,16 @@
+body {
+    background-color: #fffef9;
+}
 .container_price {
-    background-color: white;
-    opacity: 25%;
+    background-color: black;
+    /* background: linear-gradient(0deg, #00000088 85%, #ffffff44 100%); */
+    opacity: 35%;
     position: absolute;
     text-align: start;
     bottom: 0px;
-    left: 0.75rem;
-    width: 93.8145%;
-    height: 22%;
+    /* left: 0.75rem; */
+    width: 100%;
+    height: 24%;
     /* border-radius: 18px; */
     border-bottom-left-radius: 18px;
     border-bottom-right-radius: 18px;
@@ -18,10 +22,11 @@
     bottom: 0px;
     left: 0.75rem;
     height: 22%;
+    color: #fffef9;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    font-family: SourceSerif4-SemiBold;
+    font-family: SourceSerif4-Medium;
 }
 
 .price_text h6 {
