--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -14,6 +14,14 @@ h6 {
     /* font-size: 10px; */
 }
 
+.header {
+    position: sticky;
+    z-index: 1;
+    top: 0 !important;
+    background-color: white;
+
+}
+
 .col-3 {
     /* background-color: blue; */
     display: flex;
