--- a/public/css/gallery2.css
+++ b/public/css/gallery2.css
@@ -1,3 +1,14 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    display: block;
+    height: 100%;
+    background: #FFFEF9;
+
+}
 :root{
     --card_width: 180px;
     --card_border_radius: 0.25rem;
@@ -6,23 +17,6 @@
     --card_medium: 33;
     --card_large: 45;
 }
-
-.pin_container{
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-
-    display: grid;
-    grid-template-columns: repeat(auto-fill, var(--card_width));
-    grid-auto-rows: var(--row_increment);
-    justify-content: center;
-    background-color: #FFFEF9;
-}
-
 .card{
     padding: 0;
     margin: 15px 10px;
@@ -30,14 +24,7 @@
     /* background-image: url("../img/1.jpeg");
     background-size: cover; */
     border-radius: var(--card_border_radius);
-}
-
-.card_small{
-    grid-row-end: span var(--card_small);
-}
-
-.card_medium{
-    grid-row-end: span var(--card_medium);
+    height: 100%;
 }
 
 .card_large{
@@ -53,19 +40,18 @@
 .bookmark{
     position: relative;
     top: 10px;
-    left: 85%;
+    left: 88%;
     background-color: #FCB2A9;
-    width: 20px;
+    width: 30px;
     border-radius: 50%;
     height: fit-content;
 }
 
-.bookmark .icon{
+.icon{
     text-align: center;
-    font-size: 1.2em;
+    font-size: 2em;
     color: white;
-    margin-left: 10%;
-    /* background-color: #FCB2A9; */
+    margin-left: 3%;
 }
 
 #btn{
@@ -73,6 +59,50 @@
     border: none;
 }
 
+.container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.header{
+    display: flex;
+    flex-direction: row;
+    align-items: start;
+    justify-content: space-between;
+    width: 90%;
+    height: 100%;
+    margin-top: 15px;
+}
+
+.header p {
+    font-size: 1.5em;
+    color: black;
+    margin-top: 15px;
+    /* width: 50%; */
+    /* align-items: center; */
+    /* justify-content: center; */
+    display: flex;
+    margin-right: 150px;
+}
+
+.header .icon{
+    font-size: 2em;
+    color: black;
+    margin-top: 15px;
+}
+
+.isi{
+    margin-top: 160%;
+    width: 90%;
+    height: 80vh;
+    position: absolute;
+}
+
+/* modal */
 .modal{
     display: none;
     position: fixed;
@@ -81,6 +111,7 @@
     align-items: end;
     width: 100%;
     height: 100%;
+    margin-top: 4%;
     overflow: auto;
 }
 
@@ -126,7 +157,6 @@
 .modal-body img{
     width: 33.3%;
     height: 100px;
-    background-size: cover;
 }
 
 .modal-body p{
@@ -172,9 +202,4 @@
 
 .modal-footer p{
     width: 66.9%;
-}
-
-.card a{
-    width: 100%;
-    height: 100%;
 }
