--- a/public/css/inspiration2.css
+++ b/public/css/inspiration2.css
@@ -11,7 +11,7 @@ body{
 }
 :root{
     --card_width: 180px;
-    --card_border_radius: 16px;
+    --card_border_radius: 0.25rem;
     --row_increment: 10px;
     --card_small: 26;
     --card_medium: 33;
@@ -40,17 +40,23 @@ body{
 .bookmark{
     position: relative;
     top: 10px;
-    left: 90%;
-    background-color: grey;
-    width: 20px;
+    left: 88%;
+    background-color: #FCB2A9;
+    width: 30px;
     border-radius: 50%;
     height: fit-content;
 }
 
 .icon{
     text-align: center;
-    font-size: 1.2em;
+    font-size: 2em;
     color: white;
+    margin-left: 3%;
+}
+
+#btn{
+    background-color: transparent;
+    border: none;
 }
 
 .container{
@@ -80,7 +86,7 @@ body{
     /* align-items: center; */
     /* justify-content: center; */
     display: flex;
-    margin-right: 125px;
+    margin-right: 140px;
 }
 
 .header .icon{
@@ -90,7 +96,110 @@ body{
 }
 
 .isi{
-    margin-top: 15px;
+    margin-top: 160%;
     width: 90%;
     height: 80vh;
+    position: absolute;
+}
+
+/* modal */
+.modal{
+    display: none;
+    position: fixed;
+    z-index: 1;
+    justify-content: end;
+    align-items: end;
+    width: 100%;
+    height: 100%;
+    margin-top: 4%;
+    overflow: auto;
+}
+
+.modal-header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* padding: 10px; */
+    margin-top: -6%;
+    /* background-color: #FCB2A9; */
+}
+
+.modal-content{
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    height: 60%;
+    border: 1px solid #888;
+    border-radius: 10%;
+    width: 100%;
+    animation: slide ease .5s;
+}
+
+@keyframes slide {
+    100%{
+        transform: translateY(0);
+    }
+    0%{
+        transform: translateY(10rem);
+    }
+}
+
+.close{
+    color: black;
+}
+
+.modal-body{
+    display: flex;
+    flex-direction: row;
+    padding: 5px;
+    margin-top: 15px;
+}
+.modal-body img{
+    width: 33.3%;
+    height: 100px;
+}
+
+.modal-body p{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1em;
+    color: black;
+    /* margin-left: 10%; */
+    width: 33.3%;
+}
+
+.modal-body .icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10%;
+    font-size: 2em;
+    color: black;
+    /* margin-left: 10%; */
+    width: 33.3%;
+}
+
+.modal-footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+    margin-top: 15px;
+    /* background-color: #FCB2A9; */
+    width: 100%;
+    height: 50px;
+}
+
+.modal-footer .icon{
+    width: 33.3%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2em;
+    color: black;
+}
+
+.modal-footer p{
+    width: 66.9%;
 }
