--- a/public/css/viewall.css
+++ b/public/css/viewall.css
@@ -1,3 +1,14 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    display: block;
+    height: 100%;
+    background: #FFFEF9;
+
+}
 :root{
     --card_width: 180px;
     --card_border_radius: 0.25rem;
@@ -5,6 +16,33 @@
     --card_small: 26;
     --card_medium: 33;
     --card_large: 45;
+}
+
+.header{
+    display: flex;
+    flex-direction: row;
+    align-items: start;
+    justify-content: space-between;
+    width: 90%;
+    height: 100%;
+    margin-top: 15px;
+}
+
+.header p {
+    font-size: 1.5em;
+    color: black;
+    margin-top: 15px;
+    /* width: 50%; */
+    /* align-items: center; */
+    /* justify-content: center; */
+    display: flex;
+    margin-right: 95px;
+}
+
+.header .icon{
+    font-size: 2em;
+    color: black;
+    margin-top: 15px;
 }
 
 .pin_container{
@@ -32,16 +70,11 @@
     border-radius: var(--card_border_radius);
 }
 
-.card_small{
-    grid-row-end: span var(--card_small);
-}
-
 .card_medium{
     grid-row-end: span var(--card_medium);
 }
-
-.card_large{
-    grid-row-end: span var(--card_large);
+.card_small{
+    grid-row-end: span var(--card_small);
 }
 
 .card img{
@@ -53,26 +86,21 @@
 .bookmark{
     position: relative;
     top: 10px;
-    left: 85%;
+    left: 84%;
+    color: #FCB2A9;
     background-color: #FCB2A9;
     width: 20px;
     border-radius: 50%;
     height: fit-content;
 }
 
-.bookmark .icon{
+.icon{
     text-align: center;
     font-size: 1.2em;
-    color: white;
-    margin-left: 10%;
-    /* background-color: #FCB2A9; */
+    color: black;
 }
 
-#btn{
-    background-color: transparent;
-    border: none;
-}
-
+/* modal */
 .modal{
     display: none;
     position: fixed;
@@ -81,6 +109,7 @@
     align-items: end;
     width: 100%;
     height: 100%;
+    margin-top: 4%;
     overflow: auto;
 }
 
@@ -126,7 +155,6 @@
 .modal-body img{
     width: 33.3%;
     height: 100px;
-    background-size: cover;
 }
 
 .modal-body p{
@@ -174,7 +202,3 @@
     width: 66.9%;
 }
 
-.card a{
-    width: 100%;
-    height: 100%;
-}
