--- a/public/css/Detail_Vendor.css
+++ b/public/css/Detail_Vendor.css
@@ -1,10 +1,14 @@
 body {
     background-color: #fffef9;
 }
+
+.carousel-inner {
+    border-radius: 10px;
+}
 .container_price {
     background-color: black;
     /* background: linear-gradient(0deg, #00000088 85%, #ffffff44 100%); */
-    opacity: 35%;
+    opacity: 50%;
     position: absolute;
     text-align: start;
     bottom: 0px;
@@ -29,7 +33,8 @@ body {
     font-family: SourceSerif4-Medium;
 }
 
-h6 {
+h6,
+p {
     margin-bottom: 0px;
     font-family: SourceSerif4-Regular;
 }
@@ -43,8 +48,11 @@ h6 {
     /* background-color: aquamarine; */
 }
 
-h4,
 h5 {
+    font-family: SourceSerif4-SemiBold;
+}
+
+h4 {
     font-family: SourceSerif4-Bold;
 }
 
@@ -92,10 +100,16 @@ h5 {
     font-size: 13px;
     text-decoration: none;
     color: #c13c2c;
+    font-family: SourceSerif4-Regular;
 }
 
 .gallery {
     border: 2px solid #fffef9;
     height: 100px;
     padding: 0px;
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+    opacity: 1;
 }
