--- a/public/css/gallery.css
+++ b/public/css/gallery.css
@@ -36,18 +36,17 @@ body{
 .header p {
     font-size: 1.5em;
     color: black;
-    margin-top: 15px;
+    margin-top: 22px;
     /* width: 50%; */
     /* align-items: center; */
     /* justify-content: center; */
     display: flex;
-    margin-right: 155px;
+    margin-right: 145px;
 }
 
-.header .icon{
-    font-size: 2em;
+.header i{
+    font-size: 50px;
     color: black;
-    margin-top: 15px;
 }
 
 .pin_container{
@@ -91,19 +90,19 @@ body{
 .bookmark{
     position: relative;
     top: 10px;
-    left: 84%;
+    left: 80%;
     color: #FCB2A9;
     background-color: #FCB2A9;
-    width: 20px;
+    width: 30px;
     border-radius: 50%;
     height: fit-content;
 }
 
-.bookmark .icon{
+.bookmark i{
     text-align: center;
     font-size: 1.2em;
     color: white;
-    margin-left: 10%;
+    margin-left: 25%;
 }
 
 #btn{
@@ -113,7 +112,7 @@ body{
 
 
 /* modal */
-.modal{
+.modals{
     display: none;
     position: fixed;
     z-index: 1;
@@ -125,7 +124,7 @@ body{
     overflow: auto;
 }
 
-.modal-header{
+.modal-headers{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -134,7 +133,7 @@ body{
     /* background-color: #FCB2A9; */
 }
 
-.modal-content{
+.modal-contents{
     background-color: #fefefe;
     margin: 15% auto;
     padding: 20px;
@@ -159,18 +158,18 @@ body{
     color: black;
 }
 
-.modal-body{
+.modal-bodys{
     display: flex;
     flex-direction: row;
     padding: 5px;
     margin-top: 15px;
 }
-.modal-body img{
+.modal-bodys img{
     width: 33.3%;
     height: 100px;
 }
 
-.modal-body p{
+.modal-bodys p{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -180,7 +179,7 @@ body{
     width: 33.3%;
 }
 
-.modal-body .icon{
+.modal-bodys .icon{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -191,7 +190,7 @@ body{
     width: 33.3%;
 }
 
-.modal-footer{
+.modal-footers{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -202,7 +201,7 @@ body{
     height: 50px;
 }
 
-.modal-footer .icon{
+.modal-footers .icon{
     width: 33.3%;
     display: flex;
     align-items: center;
@@ -211,7 +210,8 @@ body{
     color: black;
 }
 
-.modal-footer p{
+.modal-footers p{
     width: 66.9%;
+    margin-top: 3%;
 }
 
