--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,128 +1,128 @@
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    margin: 0 !important;
+    padding: 0 !important;
+    box-sizing: border-box !important;
+    font-family: 'Poppins', sans-serif !important;
 }
 
 :root{
     --clr: #222327;
 }
 
-.navigation{
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 70px;
-    background: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 10px;
-    box-shadow: 0 0 15px rgba(0,0,0,0.1);
+.navi{
+    position: fixed !important;
+    bottom: 0 !important;
+    width: 100% !important;
+    height: 70px !important;
+    background: #fff !important;
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+    border-radius: 10px !important;
+    box-shadow: 0 0 15px rgba(0,0,0,0.1) !important;
 }
 
-.navigation ul{
-    display: flex;
-    width: 350px;
+.navi ul{
+    display: flex !important;
+    width: 350px !important;
 }
 
-.navigation ul li{
-    position: relative;
-    list-style: none;
-    width: 70px;
-    height: 70px;
-    z-index: 1;
+.navi ul li{
+    position: relative !important;
+    list-style: none !important;
+    width: 70px !important;
+    height: 70px !important;
+    z-index: 1 !important;
 }
 
-.navigation ul li a{
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 100%;
-    text-align: center;
-    font-weight: 500;
+.navi ul li a{
+    position: relative !important;
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+    flex-direction: column !important;
+    width: 100% !important;
+    text-align: center !important;
+    font-weight: 500 !important;
 }
 
-.navigation ul li a .icon{
-    position: relative;
-    display: block;
-    line-height: 75px;
-    font-size: 1.5em;
-    text-align: center;
-    transition: 0.5s;
-    color: var(--clr);
+.navi ul li a .icons{
+    position: relative !important;
+    display: block !important;
+    line-height: 75px !important;
+    font-size: 1.5em !important;
+    text-align: center !important;
+    transition: 0.5s !important;
+    color: var(--clr) !important;
 }
 
-.navigation ul li.active a .icon{
-    transform: translateY(-32px);
+.navi ul li.active a .icons{
+    transform: translateY(-32px) !important;
 }
 
-.navigation ul li a .text{
-    position: absolute;
-    color: var(--clr);
-    font-weight: 400;
-    font-size: 0.75em;
-    letter-spacing: 0.05em;
-    transition: 0.5s;
-    opacity: 0;
-    transform: translateY(20px);
+.navi ul li a .texts{
+    position: absolute !important;
+    color: var(--clr) !important;
+    font-weight: 400 !important;
+    font-size: 0.75em !important;
+    letter-spacing: 0.05em !important;
+    transition: 0.5s !important;
+    opacity: 0 !important;
+    transform: translateY(20px) !important;
 }
 
-.navigation ul li.active a .text{
-    opacity: 1;
-    transform: translateY(10px);
+.navi ul li.active a .texts{
+    opacity: 1 !important;
+    transform: translateY(10px) !important;
 }
 
-.indicator{
-    position: absolute;
-    top: -50%;
-    border-radius: 50%;
-    border: 4px solid var(--clr);
-    width: 70px;
-    height: 70px;
-    background: #FCB2A9;
-    transition: 0.5s;
+.indi{
+    position: absolute !important;
+    top: -50% !important;
+    border-radius: 50% !important;
+    border: 4px solid var(--clr) !important;
+    width: 70px !important;
+    height: 70px !important;
+    background: #FCB2A9 !important;
+    transition: 0.5s !important;
 }
 
-.indicator::before{
-    content: '';
-    position: absolute;
-    top: 50%;
-    width: 20px;
-    height: 20px;
-    background: transparent;
-    left: -22px;
-    border-top-right-radius: 15px;
+.indi::before{
+    content: '' !important;
+    position: absolute !important;
+    top: 50% !important;
+    width: 20px !important;
+    height: 20px !important;
+    background: transparent !important;
+    left: -22px !important;
+    border-top-right-radius: 15px !important;
     /* box-shadow: 1px -10px 00 var(--clr); */
 }
 
-.indicator::after{
-    content: '';
-    position: absolute;
-    top: 50%;
-    width: 20px;
-    height: 20px;
-    background: transparent;
-    right: -22px;
-    border-top-left-radius: 15px;
+.indi::after{
+    content: '' !important;
+    position: absolute !important;
+    top: 50% !important;
+    width: 20px !important;
+    height: 20px !important;
+    background: transparent !important;
+    right: -22px !important;
+    border-top-left-radius: 15px !important;
     /* box-shadow: -1px -10px 00 var(--clr); */
 }
 
-.navigation ul li:nth-child(1).active ~ .indicator{
-    transform: translateX(calc(70px * 0));
+.navi ul li:nth-child(1).active ~ .indi{
+    transform: translateX(calc(70px * 0)) !important;
 }
-.navigation ul li:nth-child(2).active ~ .indicator{
-    transform: translateX(calc(70px * 1));
+.navi ul li:nth-child(2).active ~ .indi{
+    transform: translateX(calc(70px * 1)) !important;
 }
-.navigation ul li:nth-child(3).active ~ .indicator{
-    transform: translateX(calc(70px * 2));
+.navi ul li:nth-child(3).active ~ .indi{
+    transform: translateX(calc(70px * 2)) !important;
 }
-.navigation ul li:nth-child(4).active ~ .indicator{
-    transform: translateX(calc(70px * 3));
+.navi ul li:nth-child(4).active ~ .indi{
+    transform: translateX(calc(70px * 3)) !important;
 }
-.navigation ul li:nth-child(5).active ~ .indicator{
-    transform: translateX(calc(70px * 4));
+.navi ul li:nth-child(5).active ~ .indi{
+    transform: translateX(calc(70px * 4)) !important;
 }
