--- a/public/css/viewall.css
+++ b/public/css/viewall.css
@@ -18,6 +18,10 @@ body{
     --card_large: 45;
 }
 
+.container{
+    width: 100%;
+}
+
 .header{
     display: flex;
     flex-direction: row;
@@ -31,7 +35,7 @@ body{
 .header p {
     font-size: 1.5em;
     color: black;
-    margin-top: 15px;
+    margin-top: 22px;
     /* width: 50%; */
     /* align-items: center; */
     /* justify-content: center; */
@@ -39,10 +43,9 @@ body{
     margin-right: 95px;
 }
 
-.header .icon{
-    font-size: 2em;
+.header i{
+    font-size: 50px;
     color: black;
-    margin-top: 15px;
 }
 
 .pin_container{
@@ -86,22 +89,28 @@ body{
 .bookmark{
     position: relative;
     top: 10px;
-    left: 84%;
+    left: 80%;
     color: #FCB2A9;
     background-color: #FCB2A9;
-    width: 20px;
+    width: 30px;
     border-radius: 50%;
     height: fit-content;
 }
 
-.icon{
+.bookmark i{
     text-align: center;
     font-size: 1.2em;
-    color: black;
+    color: white;
+    margin-left: 25%;
+}
+
+#btn{
+    background-color: transparent;
+    border: none;
 }
 
 /* modal */
-.modal{
+.modals{
     display: none;
     position: fixed;
     z-index: 1;
@@ -113,7 +122,7 @@ body{
     overflow: auto;
 }
 
-.modal-header{
+.modal-headers{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -122,7 +131,7 @@ body{
     /* background-color: #FCB2A9; */
 }
 
-.modal-content{
+.modal-contents{
     background-color: #fefefe;
     margin: 15% auto;
     padding: 20px;
@@ -146,18 +155,18 @@ body{
     color: black;
 }
 
-.modal-body{
+.modal-bodys{
     display: flex;
     flex-direction: row;
     padding: 5px;
     margin-top: 15px;
 }
-.modal-body img{
+.modal-bodys img{
     width: 33.3%;
     height: 100px;
 }
 
-.modal-body p{
+.modal-bodys p{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -167,7 +176,7 @@ body{
     width: 33.3%;
 }
 
-.modal-body .icon{
+.modal-bodys .icon{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -178,7 +187,7 @@ body{
     width: 33.3%;
 }
 
-.modal-footer{
+.modal-footers{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -189,7 +198,7 @@ body{
     height: 50px;
 }
 
-.modal-footer .icon{
+.modal-footers .icon{
     width: 33.3%;
     display: flex;
     align-items: center;
@@ -198,7 +207,8 @@ body{
     color: black;
 }
 
-.modal-footer p{
+.modal-footers p{
     width: 66.9%;
+    margin-top: 3%;
 }
 
