--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,8 +1,8 @@
 *{
-    margin: 0 !important;
-    padding: 0 !important;
-    box-sizing: border-box !important;
-    font-family: 'Poppins', sans-serif !important;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 :root{
@@ -23,6 +23,8 @@
 }
 
 .navi ul{
+    margin: 0;
+    padding: 0;
     display: flex !important;
     width: 350px !important;
 }
