--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -1,128 +1,133 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap');
-
-body {
-    font-family: "Source Serif 4", serif;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
 }
 
-h2 {
-    font-weight: 700;
-    /* color: #fcb2a9; */
-    /* regular 400 | semi b 600 | b 700 */
-}
-
-h6 {
-    /* font-size: 10px; */
-}
-
-i {
-    font-size: 50px;
+.chat-container {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: #f9f9f9;
 }
 
 .header {
-    position: sticky;
-    z-index: 1;
-    top: 0 !important;
-    background-color: white;
-
-}
-
-.col-3 {
-    /* background-color: blue; */
+    width: 100%;
+    height: 10%;
+    padding: 2%;
+    background-color: #ffffff;
     display: flex;
     align-items: center;
-    /* width: auto; */
+    border-bottom: 1px solid #ddd;
 }
 
-.btn {
-    padding-left: 6%;
-    /* margin-right: -450px; */
-}
-
-.col-3 button {
-    text-align: center;
-    justify-content: center !important;
-    align-items: center !important;
-    margin-left: 3.5vh;
-    background-color: #fcb2a9;
-    color: black;
-    padding-top: 10% !important;
-    padding-left: 1vh;
-    right: 5px;
-}
-
-.col-3 button:hover {
-    color: white;
-    background-color: #fcb2a9;
-}
-
-hr {
-    margin-left: -50px;
-}
-
-.chat {
-    background-color: #fffef9 !important;
-}
-
-.col-4 {
-    width: auto;
-    margin-left: -13%;
-    margin-top: 1.5%;
-    /* background-color: red; */
-}
-
-.vendor {
-    /* background-color: blue; */
-    /* height: auto; */
-}
-
-img {
-    /* background-color: aqua; */
-    border-radius: 50%;
-    width: 50px;
-}
-
-.vendor .col {
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-bottom: 5%;
-    background-color: gray;
-    color: white;
-    border-radius: 10px;
-    text-align: justify;
-}
-
-.user {
-    background-color: #fcb2a9;
-    color: black;
-    width: 80%;
-    text-align: justify;
-    border-radius: 10px;
-    margin-right: 0px;
-    margin-bottom: 5%;
-}
-
-.type {
-    background-color: white;
-    position: sticky;
-    z-index: 1;
-    bottom: 0 !important;
-    width: 100%;
-    height: 8vh;
+.back-button {
+    /* position: absolute; */
+    top: 2%;
     display: flex;
-    align-items: center !important;
-    border-top: 1px solid gray;
+    align-items: center;
+    justify-content: center;
+    margin-right: 2%;
 }
 
-.type .col {
-    /* background-color: red; */
+.vendor-info {
+    flex: 1;
 }
 
-.vendor .row .col {
-    padding-top: 1%;
+.vendor-name {
+    margin: 0;
+    font-size: 1.2em;
+    font-weight: bold;
 }
 
-.user .row {
-    padding-top: 2%;
+.rate-review {
+    margin: 0;
+    font-size: 0.9em;
+    color: #FCB2A9;
 }
 
+.appointment-button {
+    padding: 1%;
+    background-color: #ff5e5e;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+}
 
+.messages {
+    flex: 1;
+    padding: 2%;
+    overflow-y: auto;
+    background-color: #fffff8;
+}
+
+.message {
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 2%;
+}
+
+.message img {
+    width: 10%;
+    height: auto;
+    border-radius: 50%;
+    margin-right: 2%;
+    align-self: flex-start; /* Ensure image stays at the top */
+}
+
+.message-bubble {
+    max-width: 80%;
+    padding: 2%;
+    border-radius: 10px;
+    background-color: #e0e0e0;
+    color: #000;
+    word-wrap: break-word; /* Ensure long words break properly */
+}
+
+.message.left .message-bubble {
+    background-color: #d9d9d9;
+}
+
+.message.right {
+    justify-content: flex-end;
+}
+
+.message.right .message-bubble {
+    background-color: #ffdddd;
+}
+
+.input-container {
+    width: 100%;
+    height: 10%;
+    padding: 2%;
+    display: flex;
+    align-items: center;
+    border-top: 1px solid #ddd;
+    background-color: #ffffff;
+}
+
+.input-container input {
+    width: 85%;
+    padding: 2%;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+
+.input-container button {
+    width: 13%;
+    padding: 2%;
+    margin-left: 2%;
+    background-color: #ff5e5e;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+}
+
+button:hover {
+    background-color: #FCB2A9;
+    color: #ff5e5e;
+}
