--- a/public/css/appointment.css
+++ b/public/css/appointment.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    font-family: "Source Serif 4", serif;
 }
 
 .chat-container {
@@ -47,6 +47,118 @@
     margin: 0;
     font-size: 0.9em;
     color: #FCB2A9;
+}
+
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 90vh;
+}
+
+.wrapper {
+    position: absolute;
+    width: 80%;
+    border: 2px solid #FCB2A9;
+    border-radius:20px;
+    left: 9.5%;
+    top: 15%;
+    /* background-color: red; */
+}
+
+.wrapper header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 25px 30px 10px;
+}
+
+header .chosen {
+    font-weight: 700;
+    font-size: 1.5rem;
+}
+
+header .current-date {
+    font-size: 1.45rem;
+    font-weight: 500;
+}
+
+header .icons span {
+    height: 10%;
+    width: 40%;
+    margin: 0 1px;
+    cursor: pointer;
+    text-align: center;
+    line-height: 10%;
+    border-radius: 50%;
+    color: #000;
+    font-size: 1.9rem;
+    /* background: red; */
+}
+
+header .icons span:hover {
+    color: #878787;
+}
+
+header .icons span:last-child {
+    margin-right: -20px;
+}
+
+.calendar {
+    margin-left: -10%;
+    padding: 20px;
+}
+
+.calendar ul {
+    display: flex;
+    list-style: none;
+    flex-wrap: wrap;
+    text-align: center;
+}
+
+.calendar .weeks li {
+    font-weight: 500;
+}
+
+.calendar .days li{
+    /* margin-bottom: 5%; */
+    z-index: 1;
+    margin-top: 4%;
+    cursor: pointer;
+}
+
+.days li.inactive {
+    color: #aaa;
+}
+
+.days li.active {
+    color: #ffffff;
+}
+
+.calendar ul li {
+    position: relative;
+    width: calc(100% / 7);
+}
+
+.calendar .days li::before {
+    position: absolute;
+    content: "";
+    height: 25px;
+    width: 25px;
+    top: 50%;
+    left: 50%;
+    z-index: -1;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+    /* background: black; */
+}
+
+.days li:hover::before {
+    background: #f2f2f2;
+}
+
+.days li.active::before {
+    background: #ff5e5e;
 }
 
 .appointment-button {
