--- a/public/css/gallery.css
+++ b/public/css/gallery.css
@@ -22,26 +22,31 @@ body{
     width: 100%;
 }
 
-.header{
+.header {
     display: flex;
-    flex-direction: row;
-    align-items: start;
-    justify-content: space-between;
-    width: 90%;
-    height: 100%;
-    /* margin-top: 15px; */
-    margin: 15px auto;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    width: 100%;
+    height: 60px; /* Anda bisa menyesuaikan tinggi sesuai kebutuhan */
+    margin-top: 15px;
+}
+
+.header a {
+    position: absolute;
+    left: 2%; /* Tempatkan tombol back di kiri */
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 1.5rem;
 }
 
 .header p {
-    font-size: 1.5em;
+    margin: 0;
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-align: center;
+    width: 100%; /* Mengambil 100% lebar untuk memastikan teks berada di tengah */
     color: black;
-    margin-top: 22px;
-    /* width: 50%; */
-    /* align-items: center; */
-    /* justify-content: center; */
-    display: flex;
-    margin-right: 145px;
 }
 
 .header i{
@@ -83,7 +88,7 @@ body{
 
 .card img{
     width: 100%;
-    border-radius: 0.25rem;
+    border-radius: 5%;
     height: 100%;
 }
 
@@ -109,7 +114,6 @@ body{
     background-color: transparent;
     border: none;
 }
-
 
 /* modal */
 .modals{
@@ -139,10 +143,9 @@ body{
     padding: 20px;
     height: 60%;
     border: 1px solid #888;
-    border-radius: 0.25rem;
+    border-radius: 10%;
     width: 100%;
     animation: slide ease .5s;
-
 }
 
 @keyframes slide {
@@ -165,6 +168,7 @@ body{
     margin-top: 15px;
 }
 .modal-bodys img{
+    padding: 5px;
     width: 33.3%;
     height: 100px;
 }
@@ -212,6 +216,7 @@ body{
 
 .modal-footers p{
     width: 66.9%;
-    margin-top: 3%;
+    margin-top: 4%;
+    margin-left: 10%;
 }
 
