--- a/public/css/inspiration.css
+++ b/public/css/inspiration.css
@@ -81,6 +81,7 @@
     align-items: end;
     width: 100%;
     height: 100%;
+    margin-top: 4%;
     overflow: auto;
 }
 
@@ -124,9 +125,9 @@
     margin-top: 15px;
 }
 .modal-bodys img{
+    padding: 5px;
     width: 33.3%;
     height: 100px;
-    background-size: cover;
 }
 
 .modal-bodys p{
@@ -172,7 +173,8 @@
 
 .modal-footers p{
     width: 66.9%;
-    margin-top: 3%;
+    margin-top: 4%;
+    margin-left: 10%;
 }
 
 .card a{
