--- a/public/css/viewall.css
+++ b/public/css/viewall.css
@@ -22,25 +22,31 @@ body{
     width: 100%;
 }
 
-.header{
+.header {
     display: flex;
-    flex-direction: row;
-    align-items: start;
-    justify-content: space-between;
-    width: 90%;
-    height: 100%;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    width: 100%;
+    height: 60px; /* Anda bisa menyesuaikan tinggi sesuai kebutuhan */
     margin-top: 15px;
 }
 
+.header a {
+    position: absolute;
+    left: 2%; /* Tempatkan tombol back di kiri */
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 1.5rem;
+}
+
 .header p {
-    font-size: 1.5em;
+    margin: 0;
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-align: center;
+    width: 100%; /* Mengambil 100% lebar untuk memastikan teks berada di tengah */
     color: black;
-    margin-top: 22px;
-    /* width: 50%; */
-    /* align-items: center; */
-    /* justify-content: center; */
-    display: flex;
-    margin-right: 95px;
 }
 
 .header i{
@@ -162,6 +168,7 @@ body{
     margin-top: 15px;
 }
 .modal-bodys img{
+    padding: 5px;
     width: 33.3%;
     height: 100px;
 }
@@ -209,6 +216,7 @@ body{
 
 .modal-footers p{
     width: 66.9%;
-    margin-top: 3%;
+    margin-top: 4%;
+    margin-left: 10%;
 }
 
