--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -127,7 +127,7 @@
     border-radius: 5px;
 }
 
-button:hover {
+/* button:hover {
     background-color: #FCB2A9;
-    color: #FCB2A9;
-}
+    color: white;
+} */
